--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,4 +20,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 
