--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,15 @@
+$small : 480px;
+$medium : 768px;
+$large : 1024px;
+
+
 .main-container {
     display: flex;
     justify-content: center;
+
+    @media screen and (max-width: $small) {
+        overflow: hidden;
+    }
     
     flex-direction: column;
     align-items: center;
